Implementado los métodos de acceso en Swagger
